# empusa

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  CODEOWNERS  CONTRIBUTING  CONTRIBUTING.md  Dockerfile  INSTALL.md  MANIFEST.in  README.md  SECURITY.md  empusa.py  makefile  pyproject.toml  setup.py
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
empusa/: __init__.py  bus.py  cli.py  cli_ad.py  cli_build.py  cli_common.py  cli_hash.py  cli_hooks.py  cli_loot.py  cli_modules.py  cli_plugins.py  cli_privesc.py  cli_reports.py  cli_scan.py  cli_tunnel.py  cli_workspace.py  events.py  plugins.py  registry.py  services.py  workspace.py
empusa/hooks/modules/: README.md
empusa/hooks/modules/go-file-server/: go.mod  main.go  module.json
empusa/hooks/modules/go-port-scanner/: go.mod  main.go  module.json
empusa/hooks/modules/go-rev-shell/: go.mod  main.go  module.json
empusa/hooks/modules/linux-bind-shell/: main.c  module.json
empusa/hooks/modules/linux-cron-backdoor/: main.c  module.json
empusa/hooks/modules/linux-passwd-writer/: main.c  module.json
empusa/hooks/modules/linux-rev-shell/: main.c  module.json
empusa/hooks/modules/linux-suid-shell/: main.c  module.json
empusa/hooks/modules/make-multi-target/: Makefile  module.json  payload.c
empusa/hooks/modules/perl-enum/: main.pl  module.json
empusa/hooks/modules/perl-rev-shell/: main.pl  module.json
empusa/hooks/modules/rust-rev-shell/: Cargo.toml  main.rs  module.json
empusa/hooks/modules/sharp-download-exec/: Program.cs  module.json
empusa/hooks/modules/sharp-enum/: Program.cs  module.json
empusa/hooks/modules/sharp-runner/: Program.cs  module.json
empusa/hooks/modules/win-adduser/: main.c  module.json
empusa/hooks/modules/win-bind-shell/: main.c  module.json
empusa/hooks/modules/win-dll-hijack/: main.cpp  module.json
empusa/hooks/modules/win-dll-rev-shell/: main.cpp  module.json
empusa/hooks/modules/win-rev-shell/: main.c  module.json
empusa/hooks/modules/win-sched-task/: main.c  module.json
empusa/hooks/modules/win-unquoted-svc/: main.c  module.json
empusa/templates/: README.md
tests/: conftest.py  test_bus.py  test_cli.py  test_cli_build.py  test_cli_common.py  test_cli_hooks.py  test_cli_loot.py  test_cli_modules.py  test_cli_plugins.py  test_cli_privesc.py  test_cli_reports.py  test_cli_scan.py  test_cli_workspace.py  test_events.py  test_plugins.py  test_registry.py  test_services.py  test_workspace.py  test_workspace_build_e2e.py
