[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "empusa"
version = "2.1.0"
description = "Shape-shifting recon & exploitation framework workflows."
authors = [{name = "Amos Parker"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0.0"
]
license = { text = "GPL-3.0-or-later" }
keywords = ["security", "penetration-testing", "recon", "exploitation", "nmap", "hacking"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Environment :: Console",
    "Topic :: Security",
    "Operating System :: OS Independent",
    "Intended Audience :: Information Technology"
]

[project.urls]
Homepage = "https://github.com/Icarus4122/empusa"
Repository = "https://github.com/Icarus4122/empusa"
Issues = "https://github.com/Icarus4122/empusa/issues"

[project.scripts]
empusa = "empusa.cli:main"

[tool.setuptools.packages.find]
where = [""]
include = ["empusa*"]