[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "empusa"
version = "2.2.0"
description = "Shape-shifting recon & exploitation framework workflows."
authors = [{name = "Amos Parker"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0.0"
]
license = { text = "GPL-3.0-or-later" }
keywords = ["security", "penetration-testing", "recon", "exploitation", "nmap", "hacking"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Environment :: Console",
    "Topic :: Security",
    "Operating System :: OS Independent",
    "Intended Audience :: Information Technology"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/Icarus4122/empusa"
Repository = "https://github.com/Icarus4122/empusa"
Issues = "https://github.com/Icarus4122/empusa/issues"

[project.scripts]
empusa = "empusa.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"

[tool.coverage.run]
source = ["empusa"]
omit = ["empusa/hooks/modules/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 25

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["empusa"]

[tool.setuptools.packages.find]
where = [""]
include = ["empusa*"]

[tool.setuptools.package-data]
empusa = [
    "py.typed",
    "hooks/modules/**/*.json",
    "hooks/modules/**/*.c",
    "hooks/modules/**/*.cpp",
    "hooks/modules/**/*.cs",
    "hooks/modules/**/*.csproj",
    "hooks/modules/**/*.go",
    "hooks/modules/**/*.mod",
    "hooks/modules/**/*.pl",
    "hooks/modules/**/*.rs",
    "hooks/modules/**/*.toml",
    "hooks/modules/**/Makefile",
    "hooks/modules/**/*.md",
    "hooks/modules/.gitkeep",
]
